--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@
 /Outputs/
 Python_Functions/_pycache_
 Python_Functions/__pycache__
+Python_Functions/dataFormatter/input
+Python_Functions/dataFormatter/output
 ~$*
